Checkout Management App/objects/Transaction__c.object
<CustomObject>
    <description>Contains information about a customer payment attempt. For example, method of payment and whether it was successful.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>purchase</fullName>
                </value>
                <value>
                    <fullName>authorization</fullName>
                </value>
                <value>
                    <fullName>refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AddressCity__c</fullName>
        <label>Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressCountry__c</fullName>
        <label>Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressState__c</fullName>
        <label>Address State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressZipCode__c</fullName>
        <label>Address Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedAt__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FailureCode__c</fullName>
        <label>Failure Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsRefunded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refunded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MethodOfPayment__c</fullName>
        <label>Method of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>SEPA</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RefundAmount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>success</fullName>
                </value>
                <value>
                    <fullName>failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StripeChargeIdUnique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Stripe Charge Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StripeChargeId__c</fullName>
        <externalId>true</externalId>
        <label>Stripe Charge Id (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StripeInvoiceId__c</fullName>
        <label>Stripe Invoice Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VATNumber__c</fullName>
        <description>VAT Number of the Transaction&apos;s Subscription.</description>
        <formula>Subscription__r.VATNumber__c</formula>
        <label>VAT Number</label>
        <type>Text</type>
    </fields>
    <label>Checkout Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRANS-{000000}</displayFormat>
        <label>Checkout Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>